--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -1,31 +1,4 @@
-repository_type: pipeline
-
-nf_core_version: 3.1.2
-
 lint:
-  files_unchanged:
-    - .github/CONTRIBUTING.md
-    - .prettierignore
-    - .github/CONTRIBUTING.md
-    - .prettierignore
-    - CODE_OF_CONDUCT.md
-    - assets/nf-core-majiq_splicing_analysis_pipeline_logo_light.png
-    - docs/images/nf-core-majiq_splicing_analysis_pipeline_logo_light.png
-    - docs/images/nf-core-majiq_splicing_analysis_pipeline_logo_dark.png
-    - .github/ISSUE_TEMPLATE/bug_report.yml
-    - .github/CONTRIBUTING.md
-    - .github/PULL_REQUEST_TEMPLATE.md
-    - assets/email_template.txt
-    - docs/README.md
-  nextflow_config:
-    - manifest.name
-    - manifest.homePage
-    - validation.help.beforeText
-    - validation.help.afterText
-    - validation.summary.beforeText
-    - validation.summary.afterText
-  multiqc_config:
-    - report_comment
   files_exist:
     - .github/workflows/branch.yml
     - .github/workflows/ci.yml
@@ -46,16 +19,40 @@ lint:
     - .github/ISSUE_TEMPLATE/config.yml
     - .github/workflows/awstest.yml
     - .github/workflows/awsfulltest.yml
-
+  files_unchanged:
+    - .github/CONTRIBUTING.md
+    - .prettierignore
+    - .github/CONTRIBUTING.md
+    - .prettierignore
+    - CODE_OF_CONDUCT.md
+    - assets/nf-core-majiq_splicing_analysis_pipeline_logo_light.png
+    - docs/images/nf-core-majiq_splicing_analysis_pipeline_logo_light.png
+    - docs/images/nf-core-majiq_splicing_analysis_pipeline_logo_dark.png
+    - .github/ISSUE_TEMPLATE/bug_report.yml
+    - .github/CONTRIBUTING.md
+    - .github/PULL_REQUEST_TEMPLATE.md
+    - assets/email_template.txt
+    - docs/README.md
+  multiqc_config:
+    - report_comment
+  nextflow_config:
+    - manifest.name
+    - manifest.homePage
+    - validation.help.beforeText
+    - validation.help.afterText
+    - validation.summary.beforeText
+    - validation.summary.afterText
+nf_core_version: 3.4.1
+repository_type: pipeline
 template:
-  org: ZarnackGroup
-  name: majiq_splicing_analysis_pipeline
+  author: Felix Haidle
   description: In-house pipeline for analyzing alternative splicing events from RNA
     sequencing data, based on Nextflow and utilizing MAJIQ as the core splicing analysis
     tool.
-  author: Felix Haidle
-  version: 1.0.0dev
-  force: true
+  force: false
+  is_nfcore: false
+  name: majiq_splicing_analysis_pipeline
+  org: ZarnackGroup
   outdir: .
   skip_features:
     - ci
@@ -64,4 +61,4 @@ template:
     - codespaces
     - adaptivecard
     - seqera_platform
-  is_nfcore: false
+  version: 1.0.0dev
