--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -1,67 +1,65 @@
-repository_type: pipeline
-
-nf_core_version: 3.1.2
-
 lint:
-  files_unchanged:
-    - .github/CONTRIBUTING.md
-    - .prettierignore
-    - .github/CONTRIBUTING.md
-    - .prettierignore
-    - CODE_OF_CONDUCT.md
-    - assets/nf-core-majiq_splicing_analysis_pipeline_logo_light.png
-    - docs/images/nf-core-majiq_splicing_analysis_pipeline_logo_light.png
-    - docs/images/nf-core-majiq_splicing_analysis_pipeline_logo_dark.png
-    - .github/ISSUE_TEMPLATE/bug_report.yml
-    - .github/CONTRIBUTING.md
-    - .github/PULL_REQUEST_TEMPLATE.md
-    - assets/email_template.txt
-    - docs/README.md
-  nextflow_config:
-    - manifest.name
-    - manifest.homePage
-    - validation.help.beforeText
-    - validation.help.afterText
-    - validation.summary.beforeText
-    - validation.summary.afterText
-  multiqc_config:
-    - report_comment
   files_exist:
-    - .github/workflows/branch.yml
-    - .github/workflows/ci.yml
-    - .github/workflows/linting_comment.yml
-    - .github/workflows/linting.yml
-    - conf/igenomes.config
-    - conf/igenomes_ignored.config
-    - .github/workflows/branch.yml
-    - .github/workflows/ci.yml
-    - .github/workflows/linting_comment.yml
-    - .github/workflows/linting.yml
-    - conf/igenomes.config
-    - conf/igenomes_ignored.config
-    - CODE_OF_CONDUCT.md
-    - assets/nf-core-majiq_splicing_analysis_pipeline_logo_light.png
-    - docs/images/nf-core-majiq_splicing_analysis_pipeline_logo_light.png
-    - docs/images/nf-core-majiq_splicing_analysis_pipeline_logo_dark.png
-    - .github/ISSUE_TEMPLATE/config.yml
-    - .github/workflows/awstest.yml
-    - .github/workflows/awsfulltest.yml
-
+  - .github/workflows/branch.yml
+  - .github/workflows/ci.yml
+  - .github/workflows/linting_comment.yml
+  - .github/workflows/linting.yml
+  - conf/igenomes.config
+  - conf/igenomes_ignored.config
+  - .github/workflows/branch.yml
+  - .github/workflows/ci.yml
+  - .github/workflows/linting_comment.yml
+  - .github/workflows/linting.yml
+  - .github/workflows/nf-test.yml
+  - conf/igenomes.config
+  - conf/igenomes_ignored.config
+  - CODE_OF_CONDUCT.md
+  - assets/nf-core-majiq_splicing_analysis_pipeline_logo_light.png
+  - docs/images/nf-core-majiq_splicing_analysis_pipeline_logo_light.png
+  - docs/images/nf-core-majiq_splicing_analysis_pipeline_logo_dark.png
+  - .github/ISSUE_TEMPLATE/config.yml
+  - .github/workflows/awstest.yml
+  - .github/workflows/awsfulltest.yml
+  - conf/test_full.config
+  files_unchanged:
+  - .github/CONTRIBUTING.md
+  - .prettierignore
+  - .github/CONTRIBUTING.md
+  - .prettierignore
+  - CODE_OF_CONDUCT.md
+  - assets/nf-core-majiq_splicing_analysis_pipeline_logo_light.png
+  - docs/images/nf-core-majiq_splicing_analysis_pipeline_logo_light.png
+  - docs/images/nf-core-majiq_splicing_analysis_pipeline_logo_dark.png
+  - .github/ISSUE_TEMPLATE/bug_report.yml
+  - .github/CONTRIBUTING.md
+  - .github/PULL_REQUEST_TEMPLATE.md
+  - assets/email_template.txt
+  - docs/README.md
+  multiqc_config:
+  - report_comment
+  nextflow_config:
+  - manifest.name
+  - manifest.homePage
+  - validation.help.beforeText
+  - validation.help.afterText
+  - validation.summary.beforeText
+  - validation.summary.afterText
+nf_core_version: 3.3.2
+repository_type: pipeline
 template:
-  org: ZarnackGroup
-  name: majiq_splicing_analysis_pipeline
+  author: Felix Haidle
   description: In-house pipeline for analyzing alternative splicing events from RNA
     sequencing data, based on Nextflow and utilizing MAJIQ as the core splicing analysis
     tool.
-  author: Felix Haidle
-  version: 1.0.0dev
-  force: true
+  force: false
+  is_nfcore: false
+  name: majiq_splicing_analysis_pipeline
+  org: ZarnackGroup
   outdir: .
   skip_features:
-    - ci
-    - igenomes
-    - gitpod
-    - codespaces
-    - adaptivecard
-    - seqera_platform
-  is_nfcore: false
+  - igenomes
+  - gitpod
+  - codespaces
+  - adaptivecard
+  - seqera_platform
+  version: 1.0.0dev
