--- a/modules/nf-core/multiqc/meta.yml
+++ b/modules/nf-core/multiqc/meta.yml
@@ -57,10 +57,10 @@ input:
         - edam: http://edamontology.org/format_3475 # TSV
 output:
   report:
-    - "*multiqc_report.html":
+    - "*.html":
         type: file
         description: MultiQC report file
-        pattern: "multiqc_report.html"
+        pattern: ".html"
         ontologies: []
   data:
     - "*_data":
